[gd_scene load_steps=21 format=4 uid="uid://bnrsguofjjobn"]

[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_64psk"]
[ext_resource type="Script" path="res://scripts/record_manager_v2.gd" id="2_fbeuq"]
[ext_resource type="Script" path="res://scripts/recorded_run.gd" id="3_pqvwn"]
[ext_resource type="Texture2D" uid="uid://c8kluhlc0tlu1" path="res://assessts/sprites/world_tileset_3.1.png" id="4_jo0xv"]
[ext_resource type="PackedScene" uid="uid://bw05ptiq1efv" path="res://scenes/player.tscn" id="5_ychxe"]
[ext_resource type="PackedScene" uid="uid://tqd4wxiaqbdb" path="res://scenes/switch.tscn" id="6_stux0"]
[ext_resource type="PackedScene" uid="uid://hq2cw5kp71ak" path="res://scenes/gate.tscn" id="7_p6p03"]
[ext_resource type="PackedScene" uid="uid://7gmvc5t3dav1" path="res://scenes/button.tscn" id="8_i7u2o"]
[ext_resource type="PackedScene" uid="uid://bd8tve4dvpltq" path="res://scenes/platform.tscn" id="8_l5a4g"]
[ext_resource type="PackedScene" uid="uid://d1bsahw05hva1" path="res://scenes/glass.tscn" id="9_la4yo"]

[sub_resource type="SphereMesh" id="SphereMesh_rqlnd"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_i17me"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yg1di"]
radius = 4.0
height = 14.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vcpmc"]
texture = ExtResource("4_jo0xv")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0

[sub_resource type="TileSet" id="TileSet_2pyol"]
sources/0 = SubResource("TileSetAtlasSource_vcpmc")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_v6dny"]
resource_name = "tiles"
texture = ExtResource("4_jo0xv")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -5.625, 8, 0.375, -8, -1.25, -8, -8)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.5, 8, -5.625, 8, 0.375, -8, 0.375)
11:0/0 = 0
11:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.5, 8, -8, 8, -2.0625, -8, 0.375)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -5.625, 8, 0.375, -8, -1.25, -8, -8)
10:1/0 = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.5, 8, -5.625, 8, 0.375, -8, 0.375)
11:1/0 = 0
11:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.5, 8, -8, 8, -2.0625, -8, 0.375)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:2/0 = 0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -5.625, 8, 0.375, -8, -1.25, -8, -8)
10:2/0 = 0
10:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.5, 8, -5.625, 8, 0.375, -8, 0.375)
11:2/0 = 0
11:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.5, 8, -8, 8, -2.0625, -8, 0.375)
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
2:4/size_in_atlas = Vector2i(3, 3)
2:4/0 = 0

[sub_resource type="TileSet" id="TileSet_hcpa0"]
physics_layer_0/collision_layer = 3
physics_layer_0/collision_mask = 0
sources/1 = SubResource("TileSetAtlasSource_v6dny")

[sub_resource type="Animation" id="Animation_o7v3h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(147, 37)]
}

[sub_resource type="Animation" id="Animation_ui20q"]
resource_name = "move"
length = 4.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(147, 37), Vector2(149, -42)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gkgo1"]
_data = {
"RESET": SubResource("Animation_o7v3h"),
"move": SubResource("Animation_ui20q")
}

[node name="Level_Base_Plate" type="Node2D"]

[node name="Game_Manager" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("1_64psk")

[node name="Record_Manager" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("2_fbeuq")

[node name="CanvasLayer" type="CanvasLayer" parent="Record_Manager"]

[node name="Record_Indicator" type="MeshInstance2D" parent="Record_Manager/CanvasLayer"]
modulate = Color(1, 0, 0, 1)
position = Vector2(1085, 63)
scale = Vector2(88.0598, 84.8185)
mesh = SubResource("SphereMesh_rqlnd")

[node name="Recorded_Run" type="CharacterBody2D" parent="Record_Manager"]
unique_name_in_owner = true
visible = false
z_index = 8
position = Vector2(17, 0)
collision_layer = 2
collision_mask = 2
script = ExtResource("3_pqvwn")

[node name="MeshInstance2D" type="MeshInstance2D" parent="Record_Manager/Recorded_Run"]
modulate = Color(0.88841, 0.557869, 1.34766e-06, 1)
position = Vector2(-2.38419e-07, -7.5)
scale = Vector2(10, 7.5)
mesh = SubResource("CapsuleMesh_i17me")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Record_Manager/Recorded_Run"]
position = Vector2(0, -7)
shape = SubResource("CapsuleShape2D_yg1di")

[node name="Player" parent="." instance=ExtResource("5_ychxe")]
unique_name_in_owner = true
z_index = 10
position = Vector2(-17, 7)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(3, 3)
limit_smoothed = true
position_smoothing_enabled = true

[node name="TileMaps" type="Node2D" parent="."]

[node name="Background" type="TileMapLayer" parent="TileMaps"]
tile_map_data = PackedByteArray("AAD0//n/AAAAAA0AAAD0//r/AAAAAA0AAAD0//v/AAAAAA0AAAD0//z/AAAAAA0AAAD0//3/AAAAAA0AAAD0//7/AAAAAA0AAAD0////AAAAAA0AAAD0/wAAAAAAAA0AAAD0/wEAAAAAAA0AAAD0/wIAAAAAAA0AAAD0/wMAAAAAAA0AAAD0/wQAAAAAAA0AAAD0/wUAAAAAAA0AAAD0/wYAAAAAAA0AAAD1//n/AAAAAA0AAAD1//r/AAAAAA0AAAD1//v/AAAAAA0AAAD1//z/AAAAAA0AAAD1//3/AAAAAA0AAAD1//7/AAAAAA0AAAD1////AAAAAA0AAAD1/wAAAAAAAA0AAAD1/wEAAAAAAA0AAAD1/wIAAAAAAA0AAAD1/wMAAAAAAA0AAAD1/wQAAAAAAA0AAAD1/wUAAAAAAA0AAAD1/wYAAAAAAA0AAAD2//n/AAAAAA0AAAD2//r/AAAAAA0AAAD2//v/AAAAAA0AAAD2//z/AAAAAA0AAAD2//3/AAAAAA0AAAD2//7/AAAAAA0AAAD2////AAAAAA0AAAD2/wAAAAAAAA0AAAD2/wEAAAAAAA0AAAD2/wIAAAAAAA0AAAD2/wMAAAAAAA0AAAD2/wQAAAAAAA0AAAD2/wUAAAAAAA0AAAD2/wYAAAAAAA0AAAD3//n/AAAAAA0AAAD3//r/AAAAAA0AAAD3//v/AAAAAA0AAAD3//z/AAAAAA0AAAD3//3/AAAAAA0AAAD3//7/AAAAAA0AAAD3////AAAAAA0AAAD3/wAAAAAAAA0AAAD3/wEAAAAAAA0AAAD3/wIAAAAAAA0AAAD3/wMAAAAAAA0AAAD3/wQAAAAAAA0AAAD3/wUAAAAAAA0AAAD3/wYAAAAAAA0AAAD4//n/AAAAAA0AAAD4//r/AAAAAA0AAAD4//v/AAAAAA0AAAD4//z/AAAAAA0AAAD4//3/AAAAAA0AAAD4//7/AAAAAA0AAAD4////AAAAAA0AAAD4/wAAAAAAAA0AAAD4/wEAAAAAAA0AAAD4/wIAAAAAAA0AAAD4/wMAAAAAAA0AAAD4/wQAAAAAAA0AAAD4/wUAAAAAAA0AAAD4/wYAAAAAAA0AAAD5//n/AAAAAA0AAAD5//r/AAAAAA0AAAD5//v/AAAAAA0AAAD5//z/AAAAAA0AAAD5//3/AAAAAA0AAAD5//7/AAAAAA0AAAD5////AAAAAA0AAAD5/wAAAAAAAA0AAAD5/wEAAAAAAA0AAAD5/wIAAAAAAA0AAAD5/wMAAAAAAA0AAAD5/wQAAAAAAA0AAAD5/wUAAAAAAA0AAAD5/wYAAAAAAA0AAAD6//n/AAAAAA0AAAD6//r/AAAAAA0AAAD6//v/AAAAAA0AAAD6//z/AAAAAA0AAAD6//3/AAAAAA0AAAD6//7/AAAAAA0AAAD6////AAAAAA0AAAD6/wAAAAAAAA0AAAD6/wEAAAAAAA0AAAD6/wIAAAAAAA0AAAD6/wMAAAAAAA0AAAD6/wQAAAAAAA0AAAD6/wUAAAAAAA0AAAD6/wYAAAAAAA0AAAD7//n/AAAAAA0AAAD7//r/AAAAAA0AAAD7//v/AAAAAA0AAAD7//z/AAAAAA0AAAD7//3/AAAAAA0AAAD7//7/AAAAAA0AAAD7////AAAAAA0AAAD7/wAAAAAAAA0AAAD7/wEAAAAAAA0AAAD7/wIAAAAAAA0AAAD7/wMAAAAAAA0AAAD7/wQAAAAAAA0AAAD7/wUAAAAAAA0AAAD7/wYAAAAAAA0AAAD8//n/AAAAAA0AAAD8//r/AAAAAA0AAAD8//v/AAAAAA0AAAD8//z/AAAAAA0AAAD8//3/AAAAAA0AAAD8//7/AAAAAA0AAAD8////AAAAAA0AAAD8/wAAAAAAAA0AAAD8/wEAAAAAAA0AAAD8/wIAAAAAAA0AAAD8/wMAAAAAAA0AAAD8/wQAAAAAAA0AAAD8/wUAAAAAAA0AAAD8/wYAAAAAAA0AAAD9//n/AAAAAA0AAAD9//r/AAAAAA0AAAD9//v/AAAAAA0AAAD9//z/AAAAAA0AAAD9//3/AAAAAA0AAAD9//7/AAAAAA0AAAD9////AAAAAA0AAAD9/wAAAAAAAA0AAAD9/wEAAAAAAA0AAAD9/wIAAAAAAA0AAAD9/wMAAAAAAA0AAAD9/wQAAAAAAA0AAAD9/wUAAAAAAA0AAAD9/wYAAAAAAA0AAAD+//n/AAAAAA0AAAD+//r/AAAAAA0AAAD+//v/AAAAAA0AAAD+//z/AAAAAA0AAAD+//3/AAAAAA0AAAD+//7/AAAAAA0AAAD+////AAAAAA0AAAD+/wAAAAAAAA0AAAD+/wEAAAAAAA0AAAD+/wIAAAAAAA0AAAD+/wMAAAAAAA0AAAD+/wQAAAAAAA0AAAD+/wUAAAAAAA0AAAD+/wYAAAAAAA0AAAD///n/AAAAAA0AAAD///r/AAAAAA0AAAD///v/AAAAAA0AAAD///z/AAAAAA0AAAD///3/AAAAAA0AAAD///7/AAAAAA0AAAD/////AAAAAA0AAAD//wAAAAAAAA0AAAD//wEAAAAAAA0AAAD//wIAAAAAAA0AAAD//wMAAAAAAA0AAAD//wQAAAAAAA0AAAD//wUAAAAAAA0AAAD//wYAAAAAAA0AAAAAAPn/AAAAAA0AAAAAAPr/AAAAAA0AAAAAAPv/AAAAAA0AAAAAAPz/AAAAAA0AAAAAAP3/AAAAAA0AAAAAAP7/AAAAAA0AAAAAAP//AAAAAA0AAAAAAAAAAAAAAA0AAAAAAAEAAAAAAA0AAAAAAAIAAAAAAA0AAAAAAAMAAAAAAA0AAAAAAAQAAAAAAA0AAAAAAAUAAAAAAA0AAAAAAAYAAAAAAA0AAAABAPn/AAAAAA0AAAABAPr/AAAAAA0AAAABAPv/AAAAAA0AAAABAPz/AAAAAA0AAAABAP3/AAAAAA0AAAABAP7/AAAAAA0AAAABAP//AAAAAA0AAAABAAAAAAAAAA0AAAABAAEAAAAAAA0AAAABAAIAAAAAAA0AAAABAAMAAAAAAA0AAAABAAQAAAAAAA0AAAABAAUAAAAAAA0AAAABAAYAAAAAAA0AAAACAPn/AAAAAA0AAAACAPr/AAAAAA0AAAACAPv/AAAAAA0AAAACAPz/AAAAAA0AAAACAP3/AAAAAA0AAAACAP7/AAAAAA0AAAACAP//AAAAAA0AAAACAAAAAAAAAA0AAAACAAEAAAAAAA0AAAACAAIAAAAAAA0AAAACAAMAAAAAAA0AAAACAAQAAAAAAA0AAAACAAUAAAAAAA0AAAACAAYAAAAAAA0AAAADAPn/AAAAAA0AAAADAPr/AAAAAA0AAAADAPv/AAAAAA0AAAADAPz/AAAAAA0AAAADAP3/AAAAAA0AAAADAP7/AAAAAA0AAAADAP//AAAAAA0AAAADAAAAAAAAAA0AAAADAAEAAAAAAA0AAAADAAIAAAAAAA0AAAADAAMAAAAAAA0AAAADAAQAAAAAAA0AAAADAAUAAAAAAA0AAAADAAYAAAAAAA0AAAAEAPn/AAAAAA0AAAAEAPr/AAAAAA0AAAAEAPv/AAAAAA0AAAAEAPz/AAAAAA0AAAAEAP3/AAAAAA0AAAAEAP7/AAAAAA0AAAAEAP//AAAAAA0AAAAEAAAAAAAAAA0AAAAEAAEAAAAAAA0AAAAEAAIAAAAAAA0AAAAEAAMAAAAAAA0AAAAEAAQAAAAAAA0AAAAEAAUAAAAAAA0AAAAEAAYAAAAAAA0AAAAFAPn/AAAAAA0AAAAFAPr/AAAAAA0AAAAFAPv/AAAAAA0AAAAFAPz/AAAAAA0AAAAFAP3/AAAAAA0AAAAFAP7/AAAAAA0AAAAFAP//AAAAAA0AAAAFAAAAAAAAAA0AAAAFAAEAAAAAAA0AAAAFAAIAAAAAAA0AAAAFAAMAAAAAAA0AAAAFAAQAAAAAAA0AAAAFAAUAAAAAAA0AAAAFAAYAAAAAAA0AAAAGAPn/AAAAAA0AAAAGAPr/AAAAAA0AAAAGAPv/AAAAAA0AAAAGAPz/AAAAAA0AAAAGAP3/AAAAAA0AAAAGAP7/AAAAAA0AAAAGAP//AAAAAA0AAAAGAAAAAAAAAA0AAAAGAAEAAAAAAA0AAAAGAAIAAAAAAA0AAAAGAAMAAAAAAA0AAAAGAAQAAAAAAA0AAAAGAAUAAAAAAA0AAAAGAAYAAAAAAA0AAAAHAPn/AAAAAA0AAAAHAPr/AAAAAA0AAAAHAPv/AAAAAA0AAAAHAPz/AAAAAA0AAAAHAP3/AAAAAA0AAAAHAP7/AAAAAA0AAAAHAP//AAAAAA0AAAAHAAAAAAAAAA0AAAAHAAEAAAAAAA0AAAAHAAIAAAAAAA0AAAAHAAMAAAAAAA0AAAAHAAQAAAAAAA0AAAAHAAUAAAAAAA0AAAAHAAYAAAAAAA0AAAAIAPn/AAAAAA0AAAAIAPr/AAAAAA0AAAAIAPv/AAAAAA0AAAAIAPz/AAAAAA0AAAAIAP3/AAAAAA0AAAAIAP7/AAAAAA0AAAAIAP//AAAAAA0AAAAIAAAAAAAAAA0AAAAIAAEAAAAAAA0AAAAIAAIAAAAAAA0AAAAIAAMAAAAAAA0AAAAIAAQAAAAAAA0AAAAIAAUAAAAAAA0AAAAIAAYAAAAAAA0AAAAJAPn/AAAAAA0AAAAJAPr/AAAAAA0AAAAJAPv/AAAAAA0AAAAJAPz/AAAAAA0AAAAJAP3/AAAAAA0AAAAJAP7/AAAAAA0AAAAJAP//AAAAAA0AAAAJAAAAAAAAAA0AAAAJAAEAAAAAAA0AAAAJAAIAAAAAAA0AAAAJAAMAAAAAAA0AAAAJAAQAAAAAAA0AAAAJAAUAAAAAAA0AAAAJAAYAAAAAAA0AAAAKAPn/AAAAAA0AAAAKAPr/AAAAAA0AAAAKAPv/AAAAAA0AAAAKAPz/AAAAAA0AAAAKAP3/AAAAAA0AAAAKAP7/AAAAAA0AAAAKAP//AAAAAA0AAAAKAAAAAAAAAA0AAAAKAAEAAAAAAA0AAAAKAAIAAAAAAA0AAAAKAAMAAAAAAA0AAAAKAAQAAAAAAA0AAAAKAAUAAAAAAA0AAAAKAAYAAAAAAA0AAAALAPn/AAAAAA0AAAALAPr/AAAAAA0AAAALAPv/AAAAAA0AAAALAPz/AAAAAA0AAAALAP3/AAAAAA0AAAALAP7/AAAAAA0AAAALAP//AAAAAA0AAAALAAAAAAAAAA0AAAALAAEAAAAAAA0AAAALAAIAAAAAAA0AAAALAAMAAAAAAA0AAAALAAQAAAAAAA0AAAALAAUAAAAAAA0AAAALAAYAAAAAAA0AAAAMAPn/AAAAAA0AAAAMAPr/AAAAAA0AAAAMAPv/AAAAAA0AAAAMAPz/AAAAAA0AAAAMAP3/AAAAAA0AAAAMAP7/AAAAAA0AAAAMAP//AAAAAA0AAAAMAAAAAAAAAA0AAAAMAAEAAAAAAA0AAAAMAAIAAAAAAA0AAAAMAAMAAAAAAA0AAAAMAAQAAAAAAA0AAAAMAAUAAAAAAA0AAAAMAAYAAAAAAA0AAADz//n/AAAAAA0AAADz//r/AAAAAA0AAADz//v/AAAAAA0AAADz//z/AAAAAA0AAADz//3/AAAAAA0AAADz//7/AAAAAA0AAADz////AAAAAA0AAADz/wAAAAAAAA0AAADz/wEAAAAAAA0AAADz/wIAAAAAAA0AAADz/wMAAAAAAA0AAADz/wQAAAAAAA0AAADz/wUAAAAAAA0AAADz/wYAAAAAAA0AAADz//j/AAAAAA0AAADz/wcAAAAAAA0AAAD0//j/AAAAAA0AAAD0/wcAAAAAAA0AAAD1//j/AAAAAA0AAAD1/wcAAAAAAA0AAAD2//j/AAAAAA0AAAD2/wcAAAAAAA0AAAD3//j/AAAAAA0AAAD3/wcAAAAAAA0AAAD4//j/AAAAAA0AAAD4/wcAAAAAAA0AAAD5//j/AAAAAA0AAAD5/wcAAAAAAA0AAAD6//j/AAAAAA0AAAD6/wcAAAAAAA0AAAD7//j/AAAAAA0AAAD7/wcAAAAAAA0AAAD8//j/AAAAAA0AAAD8/wcAAAAAAA0AAAD9//j/AAAAAA0AAAD9/wcAAAAAAA0AAAD+//j/AAAAAA0AAAD+/wcAAAAAAA0AAAD///j/AAAAAA0AAAD//wcAAAAAAA0AAAAAAPj/AAAAAA0AAAAAAAcAAAAAAA0AAAABAPj/AAAAAA0AAAABAAcAAAAAAA0AAAACAPj/AAAAAA0AAAACAAcAAAAAAA0AAAADAPj/AAAAAA0AAAADAAcAAAAAAA0AAAAEAPj/AAAAAA0AAAAEAAcAAAAAAA0AAAAFAPj/AAAAAA0AAAAFAAcAAAAAAA0AAAAGAPj/AAAAAA0AAAAGAAcAAAAAAA0AAAAHAPj/AAAAAA0AAAAHAAcAAAAAAA0AAAAIAPj/AAAAAA0AAAAIAAcAAAAAAA0AAAAJAPj/AAAAAA0AAAAJAAcAAAAAAA0AAAAKAPj/AAAAAA0AAAAKAAcAAAAAAA0AAAALAPj/AAAAAA0AAAALAAcAAAAAAA0AAAAMAPj/AAAAAA0AAAAMAAcAAAAAAA0AAAA=")
tile_set = SubResource("TileSet_2pyol")

[node name="Mid_Ground" type="TileMapLayer" parent="TileMaps"]
use_parent_material = true
tile_map_data = PackedByteArray("AAD+/wEAAQAAAAEAAAD//wEAAQAAAAEAAAD//wIAAQAAAAEAAAD+/wIAAQAAAAEAAAD9/wEAAQAAAAEAAAAAAAEAAQAAAAEAAAAAAAIAAQAAAAEAAAABAAIAAQAAAAEAAAACAAIAAQAAAAEAAAADAAIAAQAAAAEAAAAEAAIAAQAAAAEAAAAFAAIAAQAAAAEAAAAGAAIAAQAAAAEAAAAGAAEAAQAAAAEAAAAHAAEAAQAAAAEAAAAFAAEAAQAAAAEAAAAEAAEAAQAAAAEAAAADAAEAAQAAAAEAAAACAAEAAQAAAAEAAAABAAEAAQAAAAEAAAD9//3/AQAAAAEAAAD+//3/AQAAAAEAAAD///3/AQAAAAEAAAAAAP3/AQAAAAEAAAABAP3/AQAAAAEAAAACAP3/AQAAAAEAAAA=")
tile_set = SubResource("TileSet_hcpa0")

[node name="Interactables" type="Node2D" parent="."]

[node name="Instructions" type="Label" parent="Interactables"]
visible = false
offset_right = 40.0
offset_bottom = 23.0
text = "**Put this in full screen to read directions**

Each Group contains a Switch/Button and all of its Gates/Interactables

In the inspector, drag and drop the Switch/Button/Trigger to all of its Gates/Interacables

Then, connect the Game Managers on_switch() method to the trigger"

[node name="Group1" type="Node2D" parent="Interactables"]

[node name="Switch" parent="Interactables/Group1" instance=ExtResource("6_stux0")]
z_index = 5
position = Vector2(99, -4)

[node name="Gate" parent="Interactables/Group1" node_paths=PackedStringArray("trigger") instance=ExtResource("7_p6p03")]
position = Vector2(55, 8)
trigger = NodePath("../Switch")

[node name="Gate2" parent="Interactables/Group1" node_paths=PackedStringArray("trigger") instance=ExtResource("7_p6p03")]
position = Vector2(55, -8)
trigger = NodePath("../Switch")

[node name="Group2" type="Node2D" parent="Interactables"]

[node name="Button" parent="Interactables/Group2" instance=ExtResource("8_i7u2o")]
z_index = 5
position = Vector2(-18, -69)

[node name="Gate" parent="Interactables/Group2" node_paths=PackedStringArray("trigger") instance=ExtResource("7_p6p03")]
position = Vector2(19, -60)
trigger = NodePath("../Button")

[node name="Gate2" parent="Interactables/Group2" node_paths=PackedStringArray("trigger") instance=ExtResource("7_p6p03")]
position = Vector2(19, -76)
trigger = NodePath("../Button")

[node name="Folder_Platforms" type="Node2D" parent="."]

[node name="Platform" parent="Folder_Platforms" instance=ExtResource("8_l5a4g")]
position = Vector2(147, 37)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Folder_Platforms/Platform"]
libraries = {
"": SubResource("AnimationLibrary_gkgo1")
}
autoplay = "move"

[node name="Folder_Glass" type="Node2D" parent="."]

[node name="Glass" parent="Folder_Glass" instance=ExtResource("9_la4yo")]
position = Vector2(-84, 3)

[connection signal="interactable_trigger" from="Game_Manager" to="Interactables/Group1/Switch" method="_on_game_manager_interactable_trigger"]
[connection signal="interactable_trigger" from="Game_Manager" to="Interactables/Group2/Button" method="_on_game_manager_interactable_trigger"]
[connection signal="interact" from="Record_Manager/Recorded_Run" to="Game_Manager" method="_on_interact"]
[connection signal="interact" from="Player" to="Game_Manager" method="_on_interact"]
